fixed all sizing/alignmet issues

--- a/Apple_Showcase/styles.scss
+++ b/Apple_Showcase/styles.scss
@@ -10,12 +10,11 @@ html,body{
     width: 100%;
     height: 100%;
     background-color: yellow;
-    overflow-y: hidden;
-    border: solid green;
+    //border: solid green;
 }
 
 nav{
-    border: solid green;
+    //border: solid green;
     position:fixed;
     z-index: 1;
     background: #cf3144;
@@ -47,12 +46,15 @@ nav{
     color: black;
 }
 
+
+
 #welcome-section{
     height:100vh;
     width:100%;
     max-height:100vh;
     background-color: black;
 }
+
 h1{
     font-size: 7vw;
     height: auto;
@@ -88,6 +90,7 @@ h1{
 }
 
 .prods{
+    min-height: fit-content;
     
     h2{
         color:white;
